--- a/src/app/features/home/components/hero/categories/categories.component.html
+++ b/src/app/features/home/components/hero/categories/categories.component.html
@@ -12,6 +12,7 @@
       <fa-icon [icon]="faCarrot" *ngIf="category.id === 4"></fa-icon>
       <fa-icon [icon]="faEarListen" *ngIf="category.id === 5"></fa-icon>
       <fa-icon [icon]="faUserDoctor" *ngIf="category.id === 6"></fa-icon>
+      <fa-icon [icon]="faWheelchair" *ngIf="category.id === 7"></fa-icon>
       <p class="mt-2">{{ category.name }}</p>
     </div>
   </div>
