--- a/src/app/features/login/views/login.component.css
+++ b/src/app/features/login/views/login.component.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
     font-family: 'Russo', sans-serif;
     font-size: 1.4rem;
     letter-spacing: 1px;
@@ -48,4 +48,102 @@ button:hover{
 
 .alert-error{
     color: red;
+} */
+
+
+
+
+
+/* mi perfil  */
+/* .container{
+    width: 70%;
+} 
+
+.bg-grey{
+    background-color: var(--grey4);
+    border: 2px groove var(--purple3);
 }
+
+.button{
+    width: 100%;
+    height: 2.3rem;
+    background-color: var(--purple);
+    border: none;
+    font-family: 'Roboto-bold', sans-serif;
+    font-size: .7rem;
+    letter-spacing: 1px;
+    color: var(--grey2);
+    transition: background-color .6s, color .6s;
+}
+
+.button:hover{
+    background-color: var(--purple3);
+    color: var(--purple);
+}*/
+
+/* .title{
+    font-family: 'Russo', sans-serif;
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+}
+
+p{
+    font-family: 'Roboto-reg', sans-serif;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+} */
+/*
+.icon{
+    font-size: 1.5rem;
+    color: var(--orange);
+} */
+
+
+
+
+/* Formulario registro */
+label, 
+select,
+input{
+    font-family: 'Roboto-light', sans-serif;
+    font-size: .7rem;
+}
+
+.checkbox{
+    font-size: 1rem;
+}
+
+.select-padding{
+    padding: 16px 12px 16px 12px;
+}
+
+.subtitles{
+    font-family: 'Roboto-bold', sans-serif;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+}
+
+textarea{
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--grey4);
+    font-family: 'Roboto-reg', sans-serif;
+    font-size: .8rem;
+    letter-spacing: 1px;
+    padding: 10px;
+}
+
+.title{
+    font-family: 'Russo', sans-serif;
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+}
+
+p{
+    font-family: 'Roboto-reg', sans-serif;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+}
+
+
