agrega boton al formulario

--- a/src/app/features/login/views/login.component.html
+++ b/src/app/features/login/views/login.component.html
@@ -425,6 +425,10 @@
           </div>
         </div>
       </div>
+      <div class="justify-content-center mt-5 d-flex">
+        <button class="me-3">CANCELAR</button>
+        <button class="ms-3">GUARDAR Y PUBLICAR</button>
+      </div>
     </form>
   </div>
 </div>
