--- a/src/app/features/login/views/login.component.css
+++ b/src/app/features/login/views/login.component.css
@@ -146,4 +146,22 @@ p{
     letter-spacing: 1px;
 }
 
+button{
+    background-color: var(--orange);
+    color: white;
+    font-family: 'Roboto-bold';
+    font-size: .8rem;
+    letter-spacing: 1px;
+    border-radius: 0px;
+    padding: 10px 10px;
+    transition: background-color .5s, color .5s;
+    border: none;
+}
+button:hover{
+    background-color: var(--grey);
+    color: var(--purple);
+}
+
+
+
 
