cambio de boton a usuario logeado

--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -56,6 +56,24 @@ a:hover {
     text-align: center;
 }
 
+.user-icon{
+    font-size: 1.5rem;
+    color: white;
+}
+
+.user-button{
+    font-family: 'Roboto-bold', sans-serif;
+    font-size: .9rem;
+    padding: 8px 15px;
+    letter-spacing: 1px;
+    background-color: var(--purple);
+    color: white;
+    border-radius: 0px;
+    border: none;
+    font-weight: 700;
+    transition: background-color .5s;
+}
+
 /* #image-container {
     max-width: 100px;
     height: auto;
