--- a/src/app/features/login/views/login.component.html
+++ b/src/app/features/login/views/login.component.html
@@ -426,7 +426,7 @@
         </div>
       </div>
       <div class="justify-content-center mt-5 d-flex">
-        <button class="me-3">CANCELAR</button>
+        <button class="me-3 bg-red">CANCELAR</button>
         <button class="ms-3">GUARDAR Y PUBLICAR</button>
       </div>
     </form>
